--- a/Quotes/src/app/app.component.html
+++ b/Quotes/src/app/app.component.html
@@ -2,7 +2,9 @@
   <h1>My Quotes</h1>
   <ul>
     <li *ngFor= 'let quote of quotes'>
-      {{quote}}
+      {{quote.name}}
+
     </li>
   </ul>
+  <p *ngIf='quotes.length > 3'>Your goals are too many</p>
 </div>
