--- a/Quotes/src/app/quote/quote.component.html
+++ b/Quotes/src/app/quote/quote.component.html
@@ -2,7 +2,7 @@
 <hr>
 <ul>
   <div *ngFor='let quote of quotes;let i = index'>
-    <li appStrikethrough> {{quote.name}}</li>
+    <li appStrikethrough> {{quote.name}} due on {{quote.completeDate|date|uppercase}}</li>
     <button (click)='toggleDetails(i)'>click</button>
     <app-quote-detail *ngIf='quote.showDescription' [quote]='quote' (isComplete) = 'completeGoal($event,i)'></app-quote-detail>
   </div>
