--- a/Quotes/src/app/quote-detail/quote-detail.component.html
+++ b/Quotes/src/app/quote-detail/quote-detail.component.html
@@ -2,3 +2,5 @@
     {{quote.description}}
 </p>
 <button (click)= 'quoteComplete(true)'>Complete</button>
+<p>This quote will be complete in {{quote.completeDate|dateCount}} days</p>
+<button (click)= 'quoteDelete(true)'>Delete Quote</button>
