updates to form

--- a/Quotes/src/app/quote/quote.component.html
+++ b/Quotes/src/app/quote/quote.component.html
@@ -15,6 +15,7 @@
           </div>
         </div>
       </div>
+      <app-goal-form></app-goal-form>
     </div>
   
     <p *ngIf='quotes.length > 3'>You have too many quotes</p>
