--- a/Quotes/src/app/goal-form/goal-form.component.html
+++ b/Quotes/src/app/goal-form/goal-form.component.html
@@ -1,11 +1,12 @@
 <div class="container-fluid">
     <h2 class="text-center">Create a new Quote</h2>
     <hr>
+    <form (ngSubmit)='submitGoal()' #goalForm='ngForm'></form>
     <form #quoteForm='ngForm'>
         <div class="form-group">
   
             <label for="name">Name</label>
-            <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="name">
+            <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" >
   
   <!-- Testing to see if we get any data -->
             Display {{newQuote.name}}
